--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Pragma" content="no-cache">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="/css/default.css">
-    <link rel="stylesheet" href="/css/w3.css">
-    <link rel="stylesheet" href="/css/asset.css">
+    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="css/asset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -25,7 +25,7 @@
     <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
         <div class="w3-container w3-row">
             <div class="w3-col s4">
-                <img src="/images/avatar1.png" class="w3-circle w3-margin-right" style="width:46px">
+                <img src="images/avatar1.png" class="w3-circle w3-margin-right" style="width:46px">
             </div>
             <div class="w3-col s8 w3-bar">
                 <span><strong>Welcome</strong></span><br>
@@ -42,9 +42,9 @@
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>&nbsp;Close Menu</a>
             <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>&nbsp;Overview</a>
             <a href="main.html" class="w3-bar-item w3-button w3-padding" target="_new"><i class="fa fa fa-line-chart fa-fw"></i>&nbsp;Score Card</a>
-            <a href="/html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a>
-            <a href="/html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
-            <a href="/html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
+            <a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a>
+            <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
+            <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
             <!-- <a href="https://forms.office.com/r/gSLtniXE93" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to select your team for Round-5.'>
                 "https://apps.powerapps.com/play/154d667e-93da-4e31-9874-1b597a4b00ad?tenantId=41ff26dc-250f-4b13-8981-739be8610c21&skipAppMetadata=true&hidenavbar=true"
                 <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 4rem;">
@@ -83,16 +83,16 @@
         <header class="w3-container">
             <div class="img-container">
                 <!-- <img class="w3-image" src="/images/stadium_wide.png" alt="London" style="width:100%;min-height:200px;max-height:300px;"> -->
-                <img class="w3-image" src="/images/Environment_Banner.png" alt="adelaide-oval" style="width:100%;min-height:18.75rem;max-height:31.25rem;">
+                <img class="w3-image" src="images/Environment_Banner.png" alt="adelaide-oval" style="width:100%;min-height:18.75rem;max-height:31.25rem;">
 
                 <div class="centered-left">
-                    <div id="img_centered_teamA"><img src="/images/logo/sl.png"></div>
+                    <div id="img_centered_teamA"><img src="images/logo/sl.png"></div>
                 </div>
                 <div class="centered">
                     <strong>#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong>
                 </div>
                 <div class="centered-right">
-                    <div id="img_centered_teamB"><img src="/images/logo/nam.png"></div>
+                    <div id="img_centered_teamB"><img src="images/logo/nam.png"></div>
                 </div>
             </div>
             <h5><b><i class="fa fa-dashboard"></i> Dashboard</b></h5>
