--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <br>
             <a href="#" class="w3-bar-item w3-button w3-red w3-padding">
                 <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
-                    <strong>Round-1 you can win upto 10 points!</strong>
+                    <strong>Round-1 you can win upto 12 points!</strong>
                 </div>
             </a>
 
@@ -219,10 +219,10 @@
 
     <!-- !END OF PAGE CONTENT! -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="/src/js/data.js"></script>
-    <script src="/src/js/other_functions.js"></script>
-    <script src="/src/js/data_processing.js"></script>
-    <script src="/src/js/index.js"></script>
+    <script src="src/js/data.js"></script>
+    <script src="src/js/other_functions.js"></script>
+    <script src="src/js/data_processing.js"></script>
+    <script src="src/js/index.js"></script>
 </body>
 
 </html>
