fix "cohort" issue

--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="css/w3.css">
     <title>Our Team</title>
 </head>
 
@@ -22,22 +22,22 @@
 
         <div class="w3-row"><br>
             <div class="w3-quarter">
-                <img src="/images/ppl/bj.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="images/ppl/bj.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Bhargavi Joshirao</h3>
             </div>
             
             <div class="w3-quarter">
-                <img src="/images/ppl/dy.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="images/ppl/dy.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Dharmendra Yadav</h3>
             </div>
 
             <div class="w3-quarter">
-                <img src="/images/ppl/sv.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="images/ppl/sv.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Suman Velvaluri</h3>
             </div>
 
             <div class="w3-quarter">
-                <img src="/images/ppl/rs.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="images/ppl/rs.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Ruchir Srivastava</h3>
             </div>
         </div>
