--- a/html/fame.html
+++ b/html/fame.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hall of Fame</title>
     <!-- <link rel="stylesheet" href="./default.css"> -->
-    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="css/w3.css">
     <style>
         * {box-sizing: border-box;}
     </style>
@@ -119,7 +119,7 @@
         <br><br><br>
         <div class="w3-container w3-padding-5 w3-light-grey w3-tiny">
             <p>* Dharmendra Y and Suman V do not qualify for any prizes as they have access to master data</p>
-            <p>** Week is Saturday to Friday</p>
+            <p>** Week is Sunday to Saturday</p>
         </div>
     </div>
 </body>
