--- a/html/rules.html
+++ b/html/rules.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket Carnival -2022 rules</title>
-    <link rel="stylesheet" href="/css/default.css">
-    <link rel="stylesheet" href="/css/w3.css">
+    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/w3.css">
 </head>
 
 <body>
@@ -17,13 +17,13 @@
         </div>
     </div>
     <div class="img-container">
-        <img class="w3-image" src="CC_flex_yellow.jpg" alt="cc rules">
+        <img class="w3-image" src="images/CC_flex_yellow.jpg" alt="cc rules">
     </div>
 
     <br><br><br>
     <div class="w3-container w3-padding-5 w3-light-grey w3-tiny">
         <p>* Dharmendra Y and Suman V do not qualify for any prizes as they have access to master data</p>
-        <p>** Week is Saturday to Friday (Because first IPL match started on Saturday) and the weekly winner is the one with highest points scored in that particular week.</p>
+        <p>** Week is Sunday to Saturday (Because first T20 match start on Sunday) and the weekly winner is the one with highest points scored in that particular week.</p>
         <p>*** Total score tally is the total points earned from the start of the event</p>
     </div>
 </body>
