--- a/main.html
+++ b/main.html
@@ -1,16 +1,13 @@
 <HTML>
   <HEAD>
     <TITLE>Cricket Carnival 2022</TITLE>
-		<link rel="stylesheet" href="/css/default.css">
-		<link rel="stylesheet" href="/css/w3.css">
+		<link rel="stylesheet" href="css/default.css">
+		<link rel="stylesheet" href="css/w3.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </HEAD>
-  <SCRIPT language = "JavaScript">
-		
-	</SCRIPT>
-	<script src="/src/js/data.js"></script>
-	<script src="/src/js/other_functions.js"></script>
-	<script src="/src/js/data_processing.js"></script>
+	<script src="src/js/data.js"></script>
+	<script src="src/js/other_functions.js"></script>
+	<script src="src/js/data_processing.js"></script>
 	<BODY>
 		<table  align= "center" border="1" >
 			<tr><td align='center'>
