--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
     </div>
 
-    <!-- !END OF PAGE CONTENT! -->
+    <!-- END OF PAGE CONTENT -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="src/js/data.js"></script>
     <script src="src/js/other_functions.js"></script>
