--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/w3.css">
-    <link rel="stylesheet" href="css/asset.css">
+    <!-- <link rel="stylesheet" href="css/asset.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -30,7 +30,7 @@
     <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
         <div class="w3-container w3-row">
             <div class="w3-col s4">
-                <img src="images/avatar1.png" class="w3-circle w3-margin-right" style="width:46px">
+                <img src="images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
             </div>
             <div class="w3-col s8 w3-bar">
                 <span><strong>Welcome</strong></span><br>
@@ -218,7 +218,15 @@
         </footer>
         <div class="w3-container w3-padding-5 w3-grey w3-tiny w3-text-light-gray">
             <p>**Site best viewed in 1280 x 1024 or higher screen resolution.</p>
-            <p>Disclaimer: We do not claim copyrights or ownership of any images shown on this website and they belong to thier respective creators and owners.</p>
+            <p>Disclaimer: "The 'Cricket Carnival - 2022 T20 World Cup' (Event) is a voluntary participation event intended for fun and
+            entertainment of the employees. Schlumberger, though the Event or otherwise, does not intend to promote betting,
+            gambling on sports events whatsoever.
+            
+            The Event is in full compliance of all central and state legislation in India and does not involve placing of money,
+            wager or stakes by the participants.
+            
+            The winners and their corresponding rewards (if any) will be decided by Schlumberger in its absolute discretion and
+            participants do not have a right to dispute such awards. ”We do not claim copyrights or ownership of any images shown on this website and they belong to thier respective creators and owners.</p>
         </div>
     </div>
 
