--- a/index.html
+++ b/index.html
@@ -91,13 +91,15 @@
                 <img class="w3-image" src="images/Environment_Banner.png" alt="adelaide-oval" style="width:100%;min-height:18.75rem;max-height:31.25rem;">
 
                 <div class="centered-left">
-                    <div id="img_centered_teamA"><img src="images/logo/sl.png"></div>
+                    <div id="flag_teamA"><img src="images/flag/sl.svg"></div>
+                    <div id="logo_teamA"><img src="images/logo/sl.png"></div>
                 </div>
                 <div class="centered">
                     <strong>#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong>
                 </div>
                 <div class="centered-right">
-                    <div id="img_centered_teamB"><img src="images/logo/nam.png"></div>
+                    <div id="flag_teamB"><img src="images/flag/nam.svg"></div>
+                    <div id="logo_teamB"><img src="images/logo/nam.png"></div>
                 </div>
             </div>
             <h5><b><i class="fa fa-dashboard"></i> Dashboard</b></h5>
