--- a/html/fame.html
+++ b/html/fame.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hall of Fame</title>
     <!-- <link rel="stylesheet" href="./default.css"> -->
-    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="../css/w3.css">
     <style>
         * {box-sizing: border-box;}
     </style>
@@ -16,7 +16,7 @@
 <body>
     <div class="w3-topbar">
         <div class="w3-bar w3-theme-d2 w3-left-align">
-            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="/">Home</a>
+            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="../index.html">Home</a>
         </div>
     </div>
     <br>
