--- a/html/rules.html
+++ b/html/rules.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket Carnival -2022 rules</title>
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/w3.css">
 </head>
 
 <body>
     <div class="w3-topbar">
         <div class="w3-bar w3-theme-d2 w3-left-align">
-            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="/">Home</a>
+            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="../index.html">Home</a>
         </div>
     </div>
     <div class="img-container">
-        <img class="w3-image" src="images/CC_flex_yellow.jpg" alt="cc rules">
+        <img class="w3-image" src="../images/CC_flex_yellow.jpg" alt="cc rules">
     </div>
 
     <br><br><br>
