--- a/html/rules.html
+++ b/html/rules.html
@@ -16,14 +16,25 @@
             <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="../index.html">Home</a>
         </div>
     </div>
-    <div class="img-container">
-        <img class="w3-image" src="../images/CC_flex_yellow.jpg" alt="cc rules">
+    <div class="w3-container w3-center slb-blue w3-text-white">
+        <h3>Rules of the game:</h3>
+        <!-- <p>Hello Everyone! We bring to you the Cricket Carnival T20 World Cup edition! Predict a winner and win points!</p>
+        <p>You need not know a thing about Cricket… All you need is a good guess and a bit of luck!</p>
+        <h3>Rules of the game:</h3>  
+            This game would be played in four rounds.
+            At the beginning of each round you must guess which team would win.
+            Each correct guess will win you points.
+            Link to select your guess will be shared a few days before the matches start for each round.
+            Exciting prizes to be won!
+        </p> -->
     </div>
-
+    <div class="w3-img w3-center">
+        <img class="w3-image" src="../images/rules.png" alt="T20-rules">
+    </div>
+    
     <br><br><br>
     <div class="w3-container w3-padding-5 w3-light-grey w3-tiny">
         <p>* Dharmendra Y and Suman V do not qualify for any prizes as they have access to master data</p>
-        <p>** Week is Sunday to Saturday (Because first T20 match start on Sunday) and the weekly winner is the one with highest points scored in that particular week.</p>
         <p>*** Total score tally is the total points earned from the start of the event</p>
     </div>
 </body>
