--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
             <!--a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a-->
             <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
-            <!-- <a href="https://forms.office.com/r/gSLtniXE93" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to select your team for Round-5.'>
-                <!-- "https://apps.powerapps.com/play/154d667e-93da-4e31-9874-1b597a4b00ad?tenantId=41ff26dc-250f-4b13-8981-739be8610c21&skipAppMetadata=true&hidenavbar=true"
+            <a href="https://forms.office.com/pages/responsepage.aspx?id=3Cb_QQ8lE0uJgXOb6GEMIZuTAHeoloxJvSciwwz7ZyBUMUlIQTdaR01YQTkxMEYwMklET0pMS1NYNS4u" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to select your team for Round-5.'>
+                <!-- "https://apps.powerapps.com/play/154d667e-93da-4e31-9874-1b597a4b00ad?tenantId=41ff26dc-250f-4b13-8981-739be8610c21&skipAppMetadata=true&hidenavbar=true" -->
                 <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 3rem;">
-                    <strong>Click here to select for Round2</strong>
+                    <strong>Click here to select for Round-1</strong>
                 </div>
-            </a> -->
+            </a>
 
-            <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
+            <!-- <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
                 <div class="w3-text-cyan w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
                     <strong>The trick is to never lose hope!</strong>
                 </div>
-            </a>
+            </a> -->
             <br>
             <a href="#" class="w3-bar-item w3-button w3-red w3-padding">
                 <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
@@ -88,7 +88,6 @@
 
     <!-- !PAGE CONTENT! -->
     <div class="w3-main" style="margin-left:300px;margin-top:43px;">
-
         <!-- Header -->
         <header class="w3-container">
             <div class="img-container">
@@ -97,11 +96,13 @@
 
                 <div class="centered-left">
                     <div class="div-left" id="flag_teamA"></div>
+                    <br />
                     <div class="div-left" id="logo_teamA"></div>
                 </div>
                 <div class="centered"><strong>#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong></div>
                 <div class="centered-right">
                     <div class="div-right" id="flag_teamB"></div>
+                    <br />
                     <div class="div-right" id="logo_teamB"></div>
                 </div>
             </div>
@@ -109,8 +110,8 @@
         </header>
 
         <!--Temp Notice-->
-        <div class="w3-container w3-red w3-text-white">
-            <h3>Site is being build... Thanks for your patience</h3>
+        <div class="w3-container w3-red w3-text-white w3-center">
+            <h3>Site is being built... Thank you for your patience.</h3>
         </div>
         <br>
         <div class="w3-row-padding">
@@ -205,7 +206,7 @@
         
         <!--Disclaimer-->
         <div class="w3-container w3-padding-5 w3-dark-gray w3-tiny w3-text-light-gray">
-            <!-- <p>*Abbreviations - Elec: "Electrical Department", RP: "Reservoir Performance", WEC: "Well Construction", WPRS: "Well Production Systems", Rest of STSI: ("Modelling & Simulations" + "TechCom" + "A2 & Cross Segment Team" + "Others")</p> -->
+            <p>*Abbreviations - CITC: "Schlumberger CITC", CMI: "Schlumberger CMI", INM: "Schlumberger INM", PITC: "Pune India Technology Center", PUTC: "Pune Technology Center", STSI: "Schlumberger Technology Services India")</p>
         </div>
         <!-- Detailed Score Card -->
         <div class="w3-panel w3-margin-bottom">
