--- a/html/about.html
+++ b/html/about.html
@@ -22,7 +22,7 @@
 
         <div class="w3-row"><br>
             <div class="w3-quarter">
-                <img src="images/ppl/sv.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="../images/ppl/sv.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Suman Velvaluri</h3>
             </div>
             
@@ -32,12 +32,12 @@
             </div>
 
             <div class="w3-quarter">
-                <img src="images/ppl/bj.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="../images/ppl/bj.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Bhargavi Joshirao</h3>
             </div>
 
             <!--div class="w3-quarter">
-                <img src="images/ppl/rs.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
+                <img src="../images/ppl/rs.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Ruchir Srivastava</h3>
             </div-->
         </div>
