--- a/html/about.html
+++ b/html/about.html
@@ -21,17 +21,17 @@
         <p>Meet the team who made this possible:</p>
 
         <div class="w3-row"><br>
-            <div class="w3-quarter">
+            <div class="w3-third">
                 <img src="../images/ppl/sv.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Suman Velvaluri</h3>
             </div>
             
-            <div class="w3-quarter">
+            <div class="w3-third">
                 <img src="../images/ppl/dy.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Dharmendra Yadav</h3>
             </div>
 
-            <div class="w3-quarter">
+            <div class="w3-third">
                 <img src="../images/ppl/bj.png" alt="Boss" style="width:40%" class="w3-circle w3-hover-opacity">
                 <h3>Bhargavi Joshirao</h3>
             </div>
