updated css path to avoid any copyright issues

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="site.webmanifest">
 
     <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
     .div-right > img {
@@ -111,7 +111,7 @@
 
         <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Site is being built... Thank you for your patience.</h3>
+            <h3>Warning: Site is under constrution! Thank you for your patience.</h3>
         </div>
         <br>
         <div class="w3-row-padding">
@@ -206,7 +206,7 @@
         
         <!--Disclaimer-->
         <div class="w3-container w3-padding-5 w3-dark-gray w3-tiny w3-text-light-gray">
-            <p>*Abbreviations - CITC: "Schlumberger CITC", CMI: "Schlumberger CMI", INM: "Schlumberger INM", PITC: "Pune India Technology Center", PUTC: "Pune Technology Center", STSI: "Schlumberger Technology Services India")</p>
+            <p>*Abbreviations - CITC: "Coimbatore India Technology Center", CMI: "Cameron Manufacturing India", INM: "Schlumberger INM", PITC: "Pune India Technology Center", PUTC: "Pune Technology Center", STSI: "Schlumberger Technology Services India")</p>
         </div>
         <!-- Detailed Score Card -->
         <div class="w3-panel w3-margin-bottom">
