--- a/main.html
+++ b/main.html
@@ -1,20 +1,20 @@
+<!DOCTYPE html>
 <HTML>
-  <HEAD>
-    <TITLE>Cricket Carnival 2022</TITLE>
-		<link rel="stylesheet" href="css/default.css">
-		<link rel="stylesheet" href="css/w3.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </HEAD>
-  <SCRIPT language = "JavaScript">
-		
-	</SCRIPT>
+	<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cricket Carnival 2022</title>
+	<link rel="stylesheet" href="css/default.css">
+	<!-- <link rel="stylesheet" href="css/w3.css"> -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	</head>
 	<script src="src/js/data.js"></script>
 	<script src="src/js/other_functions.js"></script>
 	<script src="src/js/data_processing.js"></script>
-	<BODY>
+	<body>
 		<table  align= "center" border="1" >
-			<tr><td align='center'>
-				
+			<tr>
+				<td align='center'>
 				<!-- <table><tr>
 				<td><input type=button value="Home" name="home" onclick="home_button()"></td>
 				<td><input type=button value="Schedule" name="schedule" onclick="schedule_button()"></td>
@@ -28,8 +28,7 @@
 				<div class="w3-topbar">
 					<div class="w3-bar w3-theme-d2 w3-left-align">
 						<!-- <a class="w3-bar-item w3-button w3-teal" href="MainBoard.html"><i class="fa fa-home w3-margin-right"></i>Home</a> 
-						<a class="w3-bar-item w3-button w3-teal" onclick="home_button()" href="#"><i
-								class="fa fa-refresh w3-margin-right"></i>Reset</a>-->
+						<a class="w3-bar-item w3-button w3-teal" onclick="home_button()" href="#"><i class="fa fa-refresh w3-margin-right"></i>Reset</a>-->
 						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="home_button()" href="#">Home</a>
 						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="schedule_button()" href="#">Schedule</a>
 						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="results_button()" href="#">Results</a>				
@@ -381,5 +380,5 @@
 
 
 	</script>	
-	</BODY>
+	</body>
 </HTML>
