--- a/html/rules.html
+++ b/html/rules.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket Carnival -2022 rules</title>
     <link rel="stylesheet" href="../css/default.css">
-    <link rel="stylesheet" href="../css/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body>
