updated rules with disclaimer

--- a/html/rules.html
+++ b/html/rules.html
@@ -35,7 +35,18 @@
     <br><br><br>
     <div class="w3-container w3-padding-5 w3-light-grey w3-tiny">
         <p>* Dharmendra Y and Suman V do not qualify for any prizes as they have access to master data</p>
-        <p>*** Total score tally is the total points earned from the start of the event</p>
+        <p>** Total score tally is the total points earned from the start of the event</p>
+    </div>
+    <div class="w3-container w3-padding-5 w3-grey w3-tiny w3-text-light-gray">
+        <p>Disclaimer: "The 'Cricket Carnival - 2022 T20 World Cup' (Event) is a voluntary participation event intended for fun and
+        entertainment of the employees. Schlumberger, though the Event or otherwise, does not intend to promote betting,
+        gambling on sports events whatsoever.
+        
+        The Event is in full compliance of all central and state legislation in India and does not involve placing of money,
+        wager or stakes by the participants.
+        
+        The winners and their corresponding rewards (if any) will be decided by Schlumberger in its absolute discretion and
+        participants do not have a right to dispute such awards. ”We do not claim copyrights or ownership of any images shown on this website and they belong to thier respective creators and owners.</p>
     </div>
 </body>
 
