--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,7 @@
 <body>
     <div class="w3-topbar">
         <div class="w3-bar w3-theme-d2 w3-left-align">
-            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="/">Home</a>
+            <a class="w3-bar-item w3-button w3-grey w3-hover-dark-gray" href="../index.html"">Home</a>
         </div>
     </div>
     <!-- Team Container -->
@@ -41,6 +41,18 @@
                 <h3>Ruchir Srivastava</h3>
             </div-->
         </div>
+    </div>
+
+    <div class="w3-container w3-padding-5 w3-grey w3-tiny w3-text-light-gray">
+        <p>Disclaimer: "The 'Cricket Carnival - 2022 T20 World Cup' (Event) is a voluntary participation event intended for fun and
+        entertainment of the employees. Schlumberger, though the Event or otherwise, does not intend to promote betting,
+        gambling on sports events whatsoever.
+        
+        The Event is in full compliance of all central and state legislation in India and does not involve placing of money,
+        wager or stakes by the participants.
+        
+        The winners and their corresponding rewards (if any) will be decided by Schlumberger in its absolute discretion and
+        participants do not have a right to dispute such awards. ”We do not claim copyrights or ownership of any images shown on this website and they belong to thier respective creators and owners.</p>
     </div>
 </body>
 
