--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
             <a href="https://forms.office.com/pages/responsepage.aspx?id=3Cb_QQ8lE0uJgXOb6GEMIZuTAHeoloxJvSciwwz7ZyBUMUlIQTdaR01YQTkxMEYwMklET0pMS1NYNS4u" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to vote your team.'>
                 <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 3rem;">
-                    <strong>Click here for Round-1</strong>
+                    <strong>Click here for Round-1 Selections</strong>
                 </div>
             </a>
 
