fixed error for participation donut chart

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <br />
                     <div class="div-left" id="logo_teamA"></div>
                 </div>
-                <div class="centered"><strong>#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong></div>
+                <div class="centered"><strong id="centered_Hash">#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong></div>
                 <div class="centered-right">
                     <div class="div-right" id="flag_teamB"></div>
                     <br />
@@ -204,7 +204,7 @@
         
         <!--Disclaimer-->
         <div class="w3-container w3-padding-5 w3-dark-gray w3-tiny w3-text-light-gray">
-            <p>*Abbreviations - CITC: "Coimbatore India Technology Center", CMI: "Cameron Manufacturing India", INM: "Schlumberger INM", PITC: "Pune India Technology Center", PUTC: "Pune Technology Center", STSI: "Schlumberger Technology Services India")</p>
+            <p>*Abbreviations - CITC: "Coimbatore India Technology Center", CMI: "Cameron Manufacturing India", INM: "India - Middle East", PITC: "Pune India Technology Center", PUTC: "Pune Technology Center", STSI: "Schlumberger Technology Services India")</p>
         </div>
         <!-- Detailed Score Card -->
         <div class="w3-panel w3-margin-bottom">
@@ -241,7 +241,8 @@
     </div>
 
     <!-- END OF PAGE CONTENT -->
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
+    <script src="https://cdn.plot.ly/plotly-2.15.1.min.js"></script>
     <script src="src/js/data.js"></script>
     <script src="src/js/other_functions.js"></script>
     <script src="src/js/data_processing.js"></script>
