removed hash from the heading

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="w3-bar w3-top slb-blue w3-large" style="z-index:4">
         <button class="w3-bar-item w3-button w3-hide-large w3-hover-none w3-hover-text-light-grey" onclick="w3_open();"><i class="fa fa-bars"></i>&nbsp;Menu</button>
         <span class="w3-bar-item w3-left">T20 World Cup 2022</span>
-        <span class="w3-bar-item w3-right">#Cricket Carnival</span>
+        <span class="w3-bar-item w3-right">#CricketCarnival</span>
     </div>
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
@@ -90,23 +90,22 @@
         <!-- Header -->
         <header class="w3-container">
             <div class="img-container">
-                <!-- <img class="w3-image" src="images/stadium_wide.png" alt="London" style="width:100%;min-height:200px;max-height:300px;"> -->
-                <!-- <img class="w3-image" src="images/Environment_Banner.png" alt="adelaide-oval" style="width:100%;min-height:18rem;max-height:30rem;"> -->
-                <img src="images/Bubble.svg" alt="back" style="width:100%;">
+                <img src="images/Bubble.svg" alt="bubbles" style="width:100%;">
 
                 <div class="centered-left">
                     <div class="div-left" id="flag_teamA"></div>
                     <br />
                     <div class="div-left" id="logo_teamA"></div>
                 </div>
-                <div class="centered"><strong id="centered_Hash">#</strong><strong id="img_centered_text">CRICKET CARNIVAL</strong></div>
+                <div class="centered"><strong id="heading_text_part1">CRICKET </strong><strong id="heading_text_part2"> CARNIVAL</strong></div>
                 <div class="centered-right">
                     <div class="div-right" id="flag_teamB"></div>
                     <br />
                     <div class="div-right" id="logo_teamB"></div>
                 </div>
+
             </div>
-            <h5><b><i class="fa fa-dashboard"></i> Dashboard</b></h5>
+            <h5><strong><i class="fa fa-dashboard"></i> Dashboard</strong></h5>
         </header>
 
         <!--Temp Notice-->
@@ -147,7 +146,7 @@
                         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
                         <div class="w3-right" id="choose_teamA_count">0</div>
                         <div class="w3-clear"></div>
-                        <div id="choose_teamA">TEAM A</div>
+                        <div class="w3-text" id="choose_teamA">TEAM A</div>
                     </div>
                 </div>
                 <div class="w3-half" id="div_team_B">
@@ -155,7 +154,7 @@
                         <div class="w3-left"><i class="fa fa-users w3-xxxlarge"></i></div>
                         <div class="w3-right" id="choose_teamB_count">0</div>
                         <div class="w3-clear"></div>
-                        <div id="choose_teamB">TEAM B</div>
+                        <div class="w3-text" id="choose_teamB">TEAM B</div>
                     </div>
                 </div>
                 <div id="choose_pie_chart" style="width:100%;max-width:500px;overflow: auto;"></div>
