added missing flags

--- a/main.html
+++ b/main.html
@@ -4,13 +4,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cricket Carnival 2022</title>
 	<link rel="stylesheet" href="css/default.css">
-	<!-- <link rel="stylesheet" href="css/w3.css"> -->
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 	<script src="src/js/data.js"></script>
 	<script src="src/js/other_functions.js"></script>
 	<script src="src/js/data_processing.js"></script>
+	</head>
 	<body>
 		<table  align= "center" border="1" >
 			<tr>
