--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Pragma" content="no-cache">
     
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="./image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="./image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
 
-    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -36,7 +36,7 @@
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
         <div class="w3-container w3-row">
-            <div class="w3-col s4"><img src="images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px"></div>
+            <div class="w3-col s4"><img src="./images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px"></div>
             <div class="w3-col s8 w3-bar">
                 <span><strong>Welcome</strong></span><br>
                 <!-- <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
@@ -51,9 +51,9 @@
         <div class="w3-bar-block">
             <a href="#" class="w3-bar-item w3-button w3-padding-16 w3-hide-large w3-dark-grey w3-hover-black" onclick="w3_close()" title="close menu"><i class="fa fa-remove fa-fw"></i>&nbsp;Close Menu</a>
             <a href="#" class="w3-bar-item w3-button w3-padding w3-blue"><i class="fa fa-users fa-fw"></i>&nbsp;Overview</a>
-            <a href="main.html" class="w3-bar-item w3-button w3-padding" target="_new"><i class="fa fa fa-line-chart fa-fw"></i>&nbsp;Score Card</a>
+            <a href="./main.html" class="w3-bar-item w3-button w3-padding" target="_new"><i class="fa fa fa-line-chart fa-fw"></i>&nbsp;Score Card</a>
             <!--a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a-->
-            <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
+            <a href="./html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
             <a href="https://forms.office.com/pages/responsepage.aspx?id=3Cb_QQ8lE0uJgXOb6GEMIZuTAHeoloxJvSciwwz7ZyBUMUlIQTdaR01YQTkxMEYwMklET0pMS1NYNS4u" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to vote your team.'>
                 <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 3rem;">
@@ -90,7 +90,7 @@
         <!-- Header -->
         <header class="w3-container">
             <div class="img-container">
-                <img src="images/Bubble.svg" alt="bubbles" style="width:100%;">
+                <img src="./images/Bubble.svg" alt="bubbles" style="width:100%;">
 
                 <div class="centered-left">
                     <div class="div-left" id="flag_teamA"></div>
@@ -210,7 +210,7 @@
             <div class="w3-row-padding" style="margin:0 -16px">                
                 <div class="w3-theme-d2">
                     <h5>Score Card</h5>
-                    <iframe src="main.html" title="MainBoard" style="width:100%;height:600px;border: 0;"></iframe>
+                    <iframe src="./main.html" title="MainBoard" style="width:100%;height:600px;border: 0;"></iframe>
                 </div>
             </div>
         </div>
@@ -242,10 +242,10 @@
     <!-- END OF PAGE CONTENT -->
     <!-- <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> -->
     <script src="https://cdn.plot.ly/plotly-2.15.1.min.js"></script>
-    <script src="src/js/data.js"></script>
-    <script src="src/js/other_functions.js"></script>
-    <script src="src/js/data_processing.js"></script>
-    <script src="src/js/index.js"></script>
+    <script src="./src/js/data.js"></script>
+    <script src="./src/js/other_functions.js"></script>
+    <script src="./src/js/data_processing.js"></script>
+    <script src="./src/js/index.js"></script>
     <script type="text/javascript">
         document.addEventListener('DOMContentLoaded', function () {
             HideLoadingSpinner();
