removed link for round-1 selections

--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
             <!--a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a-->
             <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
-            <a href="https://forms.office.com/pages/responsepage.aspx?id=3Cb_QQ8lE0uJgXOb6GEMIZuTAHeoloxJvSciwwz7ZyBUMUlIQTdaR01YQTkxMEYwMklET0pMS1NYNS4u" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to vote your team.'>
+            <!--
+            <a href="https://forms.office.com/" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to vote your team.'>
                 <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 3rem;">
                     <strong>Click here for Round-1 Selections</strong>
                 </div>
             </a>
+            -->
 
             <!-- <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
                 <div class="w3-text-cyan w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
