--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
             </a>
             -->
 
-            <!-- <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
+            <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
                 <div class="w3-text-cyan w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
                     <strong>The trick is to never lose hope!</strong>
                 </div>
-            </a> -->
+            </a>
             <br>
             <a href="#" class="w3-bar-item w3-button w3-red w3-padding">
                 <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
