--- a/index.html
+++ b/index.html
@@ -55,32 +55,44 @@
             <!--a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a-->
             <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
-            <!--
-            <a href="https://forms.office.com/" class="w3-bar-item w3-button w3-yellow w3-padding" target="_new" title='Click here to vote your team.'>
-                <div class="w3-text-pink w3-hover-text-deep-purple w3-center" style="font-size: 3rem;">
-                    <strong>Click here for Round-1 Selections</strong>
+            
+            <a href="https://forms.office.com/r/7hsVjDQHNa" class="w3-bar-item w3-button w3-text-white w3-padding w3-teal" target="_new" title='Click here to vote your team.'>
+                <div class="w3-center w3-text-white w3-hover-text-deep-blue" style="font-size: 2rem;">
+                    <strong>Click here for Round-2 Selections</strong>
                 </div>
             </a>
-            -->
-
+            <a href="https://forms.office.com/r/CCe6b2Ud52/" class="w3-bar-item w3-button w3-text-white w3-padding w3-yellow" target="_new" title='Click here to vote your team.'>
+                <div class="w3-center w3-text-pink w3-hover-text-deep-blue" style="font-size: 2rem;">
+                    <strong>Click here for Round-3 Selections</strong>
+                </div>
+            </a>
+            <!--
             <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
                 <div class="w3-text-cyan w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
                     <strong>The trick is to never lose hope!</strong>
                 </div>
             </a>
+            -->
             <br>
             <a href="#" class="w3-bar-item w3-button w3-red w3-padding">
                 <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
-                    <strong>Round-1 you can win upto 12 points!</strong>
+                    <strong>R1: 12 points!</strong>
+                </div>
+                <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
+                    <strong>R2: 28 points!</strong>
+                </div>
+                <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
+                    <strong>R3: 48 points!</strong>
                 </div>
             </a>
-
             <br>
             <a href="#" class="w3-bar-item w3-button w3-blue w3-padding">
                 <div class="w3-text-white w3-hover-text-deep-blue w3-center" style="font-size: 2rem;">
                     <strong>Have fun!</strong>
                 </div>
             </a>
+            </div>
+            <br>
         </div>
     </nav>
 
