Added Round-2 downtime notice

--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
         </header>
 
         <!--Temp Notice-->
-        <!-- <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Warning: Site is under constrution! Thank you for your patience.</h3>
+        <div class="w3-container w3-red w3-text-white w3-center">
+            <h3>Warning: Round-2 data is being updated! Thank you for your patience.</h3>
         </div>
-        <br> -->
+        <br>
+        
         <div class="w3-row-padding">
             <!-- Individual top ranking -->
             <div class="w3-quarter">
