--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Warning: Round-2 data is being updated! Thank you for your patience.</h3>
+            <h3>Notice: Round-2 data is being updated and it will ne available soon! Thank you for your patience...</h3>
         </div>
         <br>
         
