--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <!--a href="html/fame.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-street-view fa-fw"></i>&nbsp;Hall of fame</a-->
             <a href="html/rules.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>&nbsp;Rules</a>
             <a href="html/about.html" class="w3-bar-item w3-button w3-padding"><i class="fa fa-sitemap fa-fw"></i>&nbsp;Team</a><br><br>
-            
+            <!--
             <a href="https://forms.office.com/r/7hsVjDQHNa" class="w3-bar-item w3-button w3-teal w3-padding" target="_new" title='Click here to vote your team.'>
                 <div class="w3-center w3-text-white w3-hover-text-deep-blue" style="font-size: 2rem;">
                     <strong>Click here for Round-2 Selections</strong>
                 </div>
-            </a>
+            </a>-->
             <a href="https://forms.office.com/r/CCe6b2Ud52/" class="w3-bar-item w3-button w3-blue w3-padding" target="_new" title='Click here to vote your team.'>
                 <div class="w3-center w3-text-white w3-hover-text-deep-blue" style="font-size: 2rem;">
                     <strong>Click here for Round-3 Selections</strong>
@@ -119,7 +119,7 @@
 
         <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Notice: Round-2 data is being updated and it will ne available soon! Thank you for your patience...</h3>
+            <h3>Notice: Round-2 data is being added and it will be available soon! Thank you for your patience...</h3>
         </div>
         <br>
         
