--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                     <strong>Click here for Round-3 Selections</strong>
                 </div>
             </a>
+            <a href="https://forms.office.com/r/xcE8rdeuNV" class="w3-bar-item w3-button w3-teal w3-padding" target="_new" title='Click here to vote your team.'>
+                <div class="w3-center w3-text-white w3-hover-text-deep-blue" style="font-size: 2rem;">
+                    <strong>Click here for Round-4 Selections</strong>
+                </div>
+            </a>
             
             <br>
             <a href="#" class="w3-bar-item w3-button w3-yellow w3-padding">
