--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <h5><strong><i class="fa fa-dashboard"></i> Dashboard</strong></h5>
         </header>
 
-        <!--Temp Notice
+        <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Notice: Round-2 data is being added and it will be available soon! Thank you for your patience...</h3>
-        </div>-->
+            <h3>Notice: Round-3 data is being added and it will be available soon! Thank you for your patience...</h3>
+        </div>
         <br>
         
         <div class="w3-row-padding">
