--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <br>
             <a href="#" class="w3-bar-item w3-button w3-red w3-padding">
                 <div class="w3-center w3-text-white w3-hover-text-deep-blue" style="font-size: 1.5rem;">
-                    <strong>Round 1: 12 points, Round 2: 28 points, Round 3: 48 points</strong>
+                    <strong>Round 1: 12 points Round 2: 28 points Round 3: 48 points Round 4: 79 points</strong>
                 </div>
             </a>
             <br>
@@ -123,11 +123,11 @@
             <h5><strong><i class="fa fa-dashboard"></i> Dashboard</strong></h5>
         </header>
 
-        <!--Temp Notice-->
+        <!--Temp Notice
         <div class="w3-container w3-red w3-text-white w3-center">
             <h3>Notice: Round-3 data is being added and it will be available soon! Thank you for your patience...</h3>
         </div>
-        <br>
+        <br>-->
         
         <div class="w3-row-padding">
             <!-- Individual top ranking -->
