--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 						<!--<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="tstats_button()" href="#">IPL Team Stats</a-->
 						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="pstats_button()" href="#">Player Stats</a>
 						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="prediction_button()" href="#">Predictions</a>
-						<!--a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="Semi_Final_button()" href="#">Semifinals/Finals</a-->
+						<a class="w3-bar-item w3-button w3-hover-dark-gray" onclick="Semi_Final_button()" href="#">Semifinals/Finals</a>
 					</div>
 				</div>
 			</td>
@@ -360,7 +360,7 @@
 /*=======================*\
 		Semi Finals
 \*=======================*/
-	/*-divsf ="<table align='center'><tr><th colspan='3'>Select players to compare their selections</th></tr>";
+	divsf ="<table align='center'><tr><th colspan='3'>Select players to compare their selections</th></tr>";
 	divsf = divsf + "<tr><td><select id = 'semi_drop1' size ='1' onchange = 'semi_info()'>";
 	divsf = divsf +"<option value='default'>&nbsp</option>";
 	for(i=0;i<players;i++)
@@ -375,7 +375,7 @@
 		divsf = divsf +"<option value='" + player_list_asc[i] + "'>" + player_list_asc[i].toUpperCase() + "</option>";
 	divsf = divsf +"</td></tr></table><br><div id='semitable'>";
 	document.getElementById('semifinaldiv').innerHTML= divsf;
-	semi_info();-*/
+	semi_info();
 
 
 	</script>	
