--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             <h5><strong><i class="fa fa-dashboard"></i> Dashboard</strong></h5>
         </header>
 
-        <!--Temp Notice
+        <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Notice: Round-3 data is being added and it will be available soon! Thank you for your patience...</h3>
+            <h3>Notice: Winners and their prizes will be declared soon. Thanks for participating. Hope you had fun. Please provide your feedback on the link provided on the left side of this page.</h3>
         </div>
-        <br>-->
+        <br>
         
         <div class="w3-row-padding">
             <!-- Individual top ranking -->
