code for worst performers

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <!--Temp Notice-->
         <div class="w3-container w3-red w3-text-white w3-center">
-            <h3>Notice: Winners and their prizes will be declared soon. Thanks for participating. Hope you had fun. Please provide your feedback on the link provided on the left side of this page.</h3>
+            <h3>Notice: Winners and their prizes will be declared soon. Thanks for participating. Hope you enjoyed the event. Please provide your feedback on the link provided on the left side of this page.</h3>
         </div>
         <br>
         
